--- a/index.html
+++ b/index.html
@@ -139,20 +139,20 @@ color:  white;
         <div class="card-group">
           <div class="card">
             <div class="card-header text-center">B Tech</div>
-            <img src="images/klu.png" class="card-img-top mx-auto" style="width: 40%; padding: 2px;" alt="Hindu Logo">
+            <img src="images/klu.png" class="card-img-top mx-auto" style="width: 40%; padding: 2px;" alt="KLU Logo">
             <div class="card-body">
               <h5 class="card-title text-center">KL University</h5>
               <p class="text-center">2019 - 2023</p>
             </div>
             <div class="card-footer">
-              <h4 class="text-center">7.9</h4>
+              <h4 class="text-center">8.1</h4>
 
             </div>
           </div>
 
           <div class="card">
             <div class="card-header text-center">Intermediate</div>
-            <img src="images/narayana.png" class="card-img-top mx-auto" style="width: 40%;" alt="Lalitha Logo">
+            <img src="images/narayana.png" class="card-img-top mx-auto" style="width: 40%;" alt="Narayana Logo">
             <div class="card-body">
               <h5 class="card-title text-center">NARAYANA JUNIOR COLLEGE <br>(BIEAP)</h5>
               <p class="text-center">2017 - 2019</p>
